src/objects/LogIntegracion__c.object
<CustomObject>
    <description>Guarda los registros históricos a los llamados de sistemas externos</description>
    <fields>
        <fullName>ApexJobId__c</fullName>
        <label>ApexJobId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EnvioWS__c</fullName>
        <label>Envio WS</label>
        <length>60000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Estatus__c</fullName>
        <label>Estatus</label>
        <picklist>
            <picklistValues>
                <fullName>ERROR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CORRECTO</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FechaHoraCreacion__c</fullName>
        <formula>LastModifiedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fecha y hora creación</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Metodo__c</fullName>
        <label>Método</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumeroRegistros__c</fullName>
        <label>NumeroRegistros</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Origen__c</fullName>
        <description>Indica el propietario del servicio y/o método que se está consumiendo por ej. IEU, Salesforce, Adquira...etc</description>
        <label>Origen</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RespuestaWS__c</fullName>
        <label>Respuesta WS</label>
        <length>60000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Log integración</label>
    <listViews>
        <fullName>All</fullName>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Todos</label>
    </listViews>
    <nameField>
        <label>Nombre de Log integración</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Log integraciones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>